	  The intention is to make --world/--selected behave consistently with
	  @world/@selected of portage-2.2_rc47, i.e. world_sets are included
	  for both, and @system is included in @world.
	  The new systematic is: Unless you specify *-file/*-set, both are
	  admissible, and --world* implies @system, but --selected* does not.
	- New cache method sqlite*.
	- Allow --nocolor/--force-colors also for eix-update (although this is
	  a misnomer, since it is about the percentage status; the variables
	  stay separated with appropriate names: FORCE_PERCENTAGE/FORCE_COLORS)
	- Fix name output on --help.
	- Fix: Now --world-file --world really behaves like --world-file as it
	  should be according to the logic.
	- configure: More verbose output concerning options for flag mangling
	     The rest are internal changes of the code:
	- Change of #include style: Do not rely on implicit includes;
	  include in the file exactly those things needed, ignoring that
	  include files might include other files.
	  This slows down compilation but is cleaner w.r.t. dependencies.
	- Use likely()/unlikely() inflationary to hopefully improve
	  branch prediction. If you provide code make sure that
	  likely()/unlikely() is only used with Boolean arguments
	  (although gcc supports also int arguments, but do not rely on this).
	- Make use of attribute unused/noreturn if supported.
	- Avoid usage of std::unique() since usually it is better to use a
	  set anyway. Moreover, since it is broken on some systems, the
	  configure test can now be avoided.
	- Other style changes: Prefer constructor argument over assignment,
	  because it *may* be faster on some systems.
	- Use clean comparison with NULL instead of Boolean test.
	  This might be slightly slower on badly optimizing compilers but is
	  cleaner and can be used with likely()/unlikely().
	     "Hacks" for speed increase:
	- Use string::string/assign/append with args instead of substr()
	  where possible.